feat: Implement authentication and authorization features
- Added SecurityConfig for CORS and CSRF configuration.
- Introduced AuthController for user authentication and token management.
- Created AuthService for handling user login and token generation.
- Added User model and UserRepository for user data management.
- Implemented DataInitializer to create default users on startup.
- Updated ProductoController to restrict product management to ADMIN role.
- Modified frontend to include login functionality with TypeScript.
- Created admin panel for managing products with authentication checks.
- Updated navigation links across frontend pages for consistency.
- Added styles and scripts for improved user experience.

--- a/frontend/contacto.html
+++ b/frontend/contacto.html
@@ -13,10 +13,10 @@
             <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
-            <li><a href="inicio.html" class="active"> Inicio</a></li>
+            <li><a href="inicio.html"> Inicio</a></li>
             <li><a href="productos.html"> Productos</a></li>
-            <li><a href="sobre-nosotros.html"> Nosotros</a></li>
-            <li><a href="contacto.html"> Contacto</a></li>
+            <li><a href="nosotros.html"> Nosotros</a></li>
+            <li><a href="contacto.html"class="active"> Contacto</a></li>
         </ul>
         <div class="nav-actions">
             <a href="carrito.html" class="nav-icon" id="carrito-btn">
