--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
             <li><a href="inicio.html"> Inicio</a></li>
             <li><a href="productos.html"> Productos</a></li>
-            <li><a href="sobre-nosotros.html"> Nosotros</a></li>
+            <li><a href="nosotros.html"> Nosotros</a></li>
             <li><a href="contacto.html"> Contacto</a></li>
         </ul>
         <div class="nav-actions">
